# crisp8

./: .gitignore  CMakeLists.txt  README.md
crisp8/: config.c  config.h  crisp8.c  crisp8.h  crisp8_private.h  defs.h  instructions.c  instructions.h  stack.c  stack.h
examples/: Makefile  README.md  example-debug.c  example-stack.c
include/: README.md
include/private/: crisp8_private.h  instructions.h
include/public/: config.h  crisp8.h  defs.h  stack.h
